syntax = "proto3";

// 命 令 号: 1027
// 命令名称: voice_record_play_start
// 命令描述: 播放录音文件
// 文件名称: dec1027_vr_recor_play_start.proto

// 以下是 Android 生成对应 Java 所需信息
option java_package = "com.ubtedu.deviceconnect.libs.ukit.smart.protobuffer";
option java_outer_classname = "PbVoiceRecordPlayStart";

message VoiceRecordPlayStartRequest {
  // ATTR: REQUSET
  string file_name = 1; //文件名
  uint32 file_format = 2;
  uint32 session_id = 3;
}

message VoiceRecordPlayStartResponse {

}
